2004-11-03 Alexander Malysh <amalysh at kannel.org>
    * gwlib/dbpool_pgsql.c: fixed double free (PGFinish will destroy
      connection for us).

2004-10-31 Alexander Malysh <amalysh at kannel.org>
    * gw/msg.c: fixed double free in 'msg_unpack'.

2004-10-28  Stipe Tolj  <stolj@wapme.de>
    * gwlib/utils.[ch]: source code reformating of get_and_set_debugs().
      No logic change. Added global arguments to header file.
    * test/fakesmsc.c: switching from -p to -r for port, since utils.c uses
      -p for pid-file creation. This broke current cvs to use an other port
      then the default 10000 to connect to the smsc_fake module of bearerbox.
    * doc/userguide/userguide.xml: fixing the command line arguments list
      for fakesmsc to reflect the change from -p to -r for the port.

2004-10-21 Alexander Malysh <amalysh at kannel.org>
    * gw/smsc/smsc_smpp.c: fixed bug #129 (Incorrect handling of
      GSM_ADDR_TON_ALPHANUMERIC for destination address).

2004-10-13  Kalle Marjola  <kmarjola@enpocket.com>
    * test/test_ppg.c: Added support for X-WAP-Initiator-URI, use -I
      option.
    * doc/userguide/userguide.xml: updated accordingly
    * utils/run-check: fixed check so that it works in bash	

2004-10-06 Alexander Malysh <amalysh at kannel.org>
    * configure.in, configure: added check for 'sem_init' in librt.
      This needs on Solaris & HP-UX.

2004-09-28  Stipe Tolj  <stolj@wapme.de>
    * doc/userguide/userguide.xml: added section for account %o escape code
      for the sms-service url translation.

2004-09-28  Stipe Tolj  <stolj@wapme.de>
    * gw/urltrans.c: fixed comment block for new account %o escape code. 
      Thanks to the eagle'd eyes of Alex. :p
    * gw/smsc/smsc_http.c: added credits to Alex for his improvements to the
      code and fixes.

2004-09-28  Stipe Tolj  <stolj@wapme.de>
    * gw/smsc/smsc_http.c: fixing 3united (formerly Xidris) HTTP interface for