@@ -1,3 +1,8 @@
+2004-11-05 Alexander Malysh <amalysh at kannel.org>
+    * gwlib/protected.c: fixed linux version of gw_gethostbyname when
+      gethostbyname_r failed. Also free buffer on error.
+      Bug: #157.
+
 2004-11-03 Alexander Malysh <amalysh at kannel.org>
     * gwlib/dbpool_pgsql.c: fixed double free (PGFinish will destroy
       connection for us).
